RESOLVED FIXED191031
[GTK][WPE] Fixes to the PublicSuffix implementation
https://bugs.webkit.org/show_bug.cgi?id=191031
Summary [GTK][WPE] Fixes to the PublicSuffix implementation
Claudio Saavedra
Reported 2018-10-29 09:08:52 PDT
[GTK][WPE] Fixes to the PublicSuffix implementation
Attachments
Patch (4.37 KB, patch)
2018-10-29 09:11 PDT, Claudio Saavedra
no flags
Claudio Saavedra
Comment 1 2018-10-29 09:11:55 PDT
Claudio Saavedra
Comment 2 2018-10-29 09:14:48 PDT
With this patch there are these two failures. I am not familiar with the r4--- prefix, is that something we should be able to decode or just noise? ../../Tools/TestWebKitAPI/Tests/WebCore/PublicSuffix.cpp:170 Expected equality of these values: String() Which is: topPrivatelyControlledDomain("1") Which is: 1 ../../Tools/TestWebKitAPI/Tests/WebCore/PublicSuffix.cpp:174 Expected equality of these values: String() Which is: topPrivatelyControlledDomain("r4---asdf") Which is: r4---asdf
Claudio Saavedra
Comment 3 2018-10-29 09:15:51 PDT
NB: I am removing the test for 栃木.jp as it's a public-suffix and I don't think it should be tested where it currently is.
Michael Catanzaro
Comment 4 2018-10-29 11:38:55 PDT
(In reply to Claudio Saavedra from comment #2) > With this patch there are these two failures. I am not familiar with the > r4--- prefix, is that something we should be able to decode or just noise? I don't know IDN. No clue.
WebKit Commit Bot
Comment 5 2018-10-30 01:27:04 PDT
Comment on attachment 353291 [details] Patch Clearing flags on attachment: 353291 Committed r237584: <https://trac.webkit.org/changeset/237584>
WebKit Commit Bot
Comment 6 2018-10-30 01:27:06 PDT
All reviewed patches have been landed. Closing bug.
Note You need to log in before you can comment on or make changes to this bug.